src/objects/Mogli_SMS__ApplicationSettings__c.object
<CustomObject>
    <fields>
        <fullName>Mogli_SMS__Active_Form_Instance_Status__c</fullName>
        <label>Active Form Instance Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Allow_Notifications_For__c</fullName>
        <label>Allow Notifications For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Any incoming SMS</fullName>
                    <default>true</default>
                    <label>Any incoming SMS</label>
                </value>
                <value>
                    <fullName>Only incoming SMS from a contact I own</fullName>
                </value>
                <value>
                    <fullName>Only incoming SMS from a lead I own</fullName>
                </value>
                <value>
                    <fullName>Only incoming SMS from contacts and leads I own</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Allow_Parallel_Queues__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows parallel processing of the queueable system within MogliSMS.</description>
        <inlineHelpText>Allows parallel processing of the queueable system within MogliSMS. Activate only when necessary.</inlineHelpText>
        <label>Allow Parallel Queues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__AttachmentTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AttachmentTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Complete_Form_Instance_Status__c</fullName>
        <label>Complete Form Instance Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__ContactMergeFields__c</fullName>
        <label>Contact Merge Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__ContactTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ContactTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Create_Anonymous_Leads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Anonymous Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__DefaultGatewayMode__c</fullName>
        <label>DefaultGatewayMode</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default Gateway</fullName>
                    <default>true</default>
                    <label>Default Gateway</label>
                </value>
                <value>
                    <fullName>User&apos;s Assigned Phone Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mogli_SMS__DefaultGateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Gateway</label>
        <referenceTo>Mogli_SMS__Gateway__c</referenceTo>
        <relationshipLabel>Application Settings</relationshipLabel>
        <relationshipName>Application_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Disable_Queuables__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shuts down all MogliSMS queuables. Use only for urgent situations.</description>
        <inlineHelpText>Emergency shut-off for all MogliSMS queuables. Activate only when necessary.</inlineHelpText>
        <label>Disable Queuables</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Duration_of_Notifications__c</fullName>
        <defaultValue>30</defaultValue>
        <description>how long a notification is visible for before disappearing</description>
        <inlineHelpText>Number of minutes a notification is visible for</inlineHelpText>
        <label>Duration of Notifications (minutes)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__FormTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>FormTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__LeadMergeFields__c</fullName>
        <label>Lead Merge Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__LeadTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>LeadTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Maximum_Visible_Notifications__c</fullName>
        <description>Number of maximum notificaitons</description>
        <inlineHelpText>Number of maximum notificaitons</inlineHelpText>
        <label>Maximum Visible Notifications</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Notification_Sound__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows notification tone to be played on new notification</description>
        <inlineHelpText>Allows notification tone to be heard</inlineHelpText>
        <label>Notification Sound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Notify_When__c</fullName>
        <label>Notify Me When</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Only show SMS notifications when I’m in the Mogli app</fullName>
                    <default>true</default>
                    <label>Only show SMS notifications when I’m in the Mogli app</label>
                </value>
                <value>
                    <fullName>Always show SMS notifications, regardless of the app</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mogli_SMS__PossibleAnswerDelimiter__c</fullName>
        <label>Possible Answer Delimiter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__SMSTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SMSTrigger</label>
        <type>Checkbox</type>
    </fields>
    <label>Application Setting</label>
    <listViews>
        <fullName>Mogli_SMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Application Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>